# Datathon_Polyfinances

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
Data/: fiscal_regulation_sample.txt  preprocessing.ipynb  sample_portfolio.csv
Data Justin/: 2025-08-15_composition_sp500.csv  2025-09-26_stocks-performance.csv
Data Justin/directives/: 1.DIRECTIVE (UE) 20192161 DU PARLEMENT EUROPÉEN ET DU CONSEIL.html  3.H.R.5376 - Inflation Reduction Act of 2022.xml  4.REGULATION (EU) 20241689 OF THE EUROPEAN PARLIAMENT AND OF THE COUNCIL.html  5.中华人民共和国能源法__中国政府网.html  6.人工知能関連技術の研究開発及び活用の推進に関する法律.html  README.md
Data Justin/fillings/ADP/: 2025-08-06-10k-ADP.html
Data Justin/fillings/BR/: 2025-08-05-10k-BR.html
Data Justin/fillings/CAH/: 2025-08-12-10k-CAH.html
Data Justin/fillings/CLX/: 2025-08-08-10k-CLX.html
Data Justin/fillings/CTAS/: 2025-07-28-10k-CTAS.html
Data Justin/fillings/DDOG/: 2025-02-20-10k-DDOG.html
Data Justin/fillings/DRI/: 2025-07-18-10k-DRI.html
Data Justin/fillings/FDX/: 2025-07-21-10k-FDX.html
Data Justin/fillings/FOXA/: 2025-08-06-10k-FOXA.html
ML/: agents.py  bedrock_agent.py  cleanpreprocessing.ipynb  deploy_agent.py  preprocessing (1).ipynb  preprocessing.py  simple_agent.py
UI/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
UI/src/: App.css  App.tsx  index.html  main.tsx
UI/src/api/: aiClient.ts
challenges/: architecture_finance_ai.md  architecture_finance_ai_FR.md  diagram_architecture_mermaid.md
server/: index.js  package.json
(+58 files in other folders)
